Enforce immutability of map